Fixed Collapsible icon alignment

--- a/src/components/Collapsible/Collapsible.scss
+++ b/src/components/Collapsible/Collapsible.scss
@@ -17,9 +17,13 @@
     padding: 10px 15px;
     border-radius: 5px;
     color: white;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     @media screen and (max-width: 600px) {
       font-size: 13px;
-      padding: 10px;
+      padding: 0 10px;
     }
   }
   div {
@@ -43,7 +47,6 @@
     }
   }
   img {
-    float: right;
     transition: transform 0.5s ease;
   }
   &.hidden img {
